Добавлена костыльная обработка для MEXC